--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,35 +10,38 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import linregress\n",
-    "import xlrd"
+    "import xlrd\n",
+    "import sklearn.datasets as dta\n",
+    "import scipy.stats as st"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdp_df_original = pd.read_csv(r'Sources\\GDP.csv')\n",
     "gdp_df_original['DATE'] = gdp_df_original['DATE'].str.replace(r'-01-01$', '')\n",
-    "gdp_df_original = gdp_df_original.rename(columns={\"DATE\": \"Year\"})\n"
+    "gdp_df_original = gdp_df_original.rename(columns={\"DATE\": \"Year\"})\n",
+    "gdp_df_original['Year'] = gdp_df_original['Year'].astype(int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "gdp_df_yearly = gdp_df_original.copy()\n",
     "gdp_df_yearly.set_index('Year', inplace=True)\n",
     "\n",
-    "gdp_df_yearly[\"Annual (Adjusted) %\"] = (gdp_df_yearly[\"GDP\"] / gdp_df_yearly.loc[\"1999\", \"GDP\"] - 1) * 100\n"
+    "gdp_df_yearly[\"Annual (Adjusted) %\"] = (gdp_df_yearly[\"GDP\"] / gdp_df_yearly.loc[1999, \"GDP\"] - 1) * 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -545,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -657,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -824,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1108,10 +1111,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>CPI</th>\n",
+       "      <th>Earning</th>\n",
+       "      <th>Unemployment</th>\n",
+       "      <th>Productivity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>9630.66250</td>\n",
+       "      <td>166.575000</td>\n",
+       "      <td>13.487500</td>\n",
+       "      <td>4.216667</td>\n",
+       "      <td>87.439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>10252.34650</td>\n",
+       "      <td>172.200000</td>\n",
+       "      <td>14.012500</td>\n",
+       "      <td>3.966667</td>\n",
+       "      <td>88.776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>10581.82225</td>\n",
+       "      <td>177.066667</td>\n",
+       "      <td>14.541667</td>\n",
+       "      <td>4.741667</td>\n",
+       "      <td>89.305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>10936.41825</td>\n",
+       "      <td>179.875000</td>\n",
+       "      <td>14.964167</td>\n",
+       "      <td>5.783333</td>\n",
+       "      <td>91.139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003</th>\n",
+       "      <td>11458.24575</td>\n",
+       "      <td>183.958333</td>\n",
+       "      <td>15.364167</td>\n",
+       "      <td>5.991667</td>\n",
+       "      <td>93.328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>12213.73025</td>\n",
+       "      <td>188.883333</td>\n",
+       "      <td>15.685833</td>\n",
+       "      <td>5.541667</td>\n",
+       "      <td>95.399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005</th>\n",
+       "      <td>13036.63700</td>\n",
+       "      <td>195.291667</td>\n",
+       "      <td>16.115833</td>\n",
+       "      <td>5.083333</td>\n",
+       "      <td>96.856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006</th>\n",
+       "      <td>13814.60900</td>\n",
+       "      <td>201.591667</td>\n",
+       "      <td>16.740833</td>\n",
+       "      <td>4.608333</td>\n",
+       "      <td>97.324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007</th>\n",
+       "      <td>14451.85900</td>\n",
+       "      <td>207.342417</td>\n",
+       "      <td>17.409167</td>\n",
+       "      <td>4.616667</td>\n",
+       "      <td>97.858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>14712.84500</td>\n",
+       "      <td>215.302500</td>\n",
+       "      <td>18.065833</td>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>96.703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>14448.93250</td>\n",
+       "      <td>214.537000</td>\n",
+       "      <td>18.609167</td>\n",
+       "      <td>9.283333</td>\n",
+       "      <td>96.945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>14992.05200</td>\n",
+       "      <td>218.055500</td>\n",
+       "      <td>19.051667</td>\n",
+       "      <td>9.608333</td>\n",
+       "      <td>99.488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>15542.58175</td>\n",
+       "      <td>224.939167</td>\n",
+       "      <td>19.438333</td>\n",
+       "      <td>8.933333</td>\n",
+       "      <td>99.314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>16197.00725</td>\n",
+       "      <td>229.593917</td>\n",
+       "      <td>19.725833</td>\n",
+       "      <td>8.075000</td>\n",
+       "      <td>100.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>16784.85050</td>\n",
+       "      <td>232.957083</td>\n",
+       "      <td>20.135000</td>\n",
+       "      <td>7.358333</td>\n",
+       "      <td>100.039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>17527.25825</td>\n",
+       "      <td>236.736167</td>\n",
+       "      <td>20.596667</td>\n",
+       "      <td>6.158333</td>\n",
+       "      <td>100.531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>18224.78025</td>\n",
+       "      <td>237.017000</td>\n",
+       "      <td>21.025833</td>\n",
+       "      <td>5.275000</td>\n",
+       "      <td>101.396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>18715.04050</td>\n",
+       "      <td>240.007167</td>\n",
+       "      <td>21.547500</td>\n",
+       "      <td>4.875000</td>\n",
+       "      <td>100.780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>19519.42350</td>\n",
+       "      <td>245.119583</td>\n",
+       "      <td>22.052500</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>101.180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>20580.22300</td>\n",
+       "      <td>251.106833</td>\n",
+       "      <td>22.703333</td>\n",
+       "      <td>3.891667</td>\n",
+       "      <td>102.149</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              GDP         CPI    Earning  Unemployment  Productivity\n",
+       "Year                                                                \n",
+       "1999   9630.66250  166.575000  13.487500      4.216667        87.439\n",
+       "2000  10252.34650  172.200000  14.012500      3.966667        88.776\n",
+       "2001  10581.82225  177.066667  14.541667      4.741667        89.305\n",
+       "2002  10936.41825  179.875000  14.964167      5.783333        91.139\n",
+       "2003  11458.24575  183.958333  15.364167      5.991667        93.328\n",
+       "2004  12213.73025  188.883333  15.685833      5.541667        95.399\n",
+       "2005  13036.63700  195.291667  16.115833      5.083333        96.856\n",
+       "2006  13814.60900  201.591667  16.740833      4.608333        97.324\n",
+       "2007  14451.85900  207.342417  17.409167      4.616667        97.858\n",
+       "2008  14712.84500  215.302500  18.065833      5.800000        96.703\n",
+       "2009  14448.93250  214.537000  18.609167      9.283333        96.945\n",
+       "2010  14992.05200  218.055500  19.051667      9.608333        99.488\n",
+       "2011  15542.58175  224.939167  19.438333      8.933333        99.314\n",
+       "2012  16197.00725  229.593917  19.725833      8.075000       100.000\n",
+       "2013  16784.85050  232.957083  20.135000      7.358333       100.039\n",
+       "2014  17527.25825  236.736167  20.596667      6.158333       100.531\n",
+       "2015  18224.78025  237.017000  21.025833      5.275000       101.396\n",
+       "2016  18715.04050  240.007167  21.547500      4.875000       100.780\n",
+       "2017  19519.42350  245.119583  22.052500      4.350000       101.180\n",
+       "2018  20580.22300  251.106833  22.703333      3.891667       102.149"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp = gdp_df_yearly.loc[:, \"GDP\"]\n",
+    "cpi = cpi_df_yearly.loc[:, \"Annual\"]\n",
+    "earning = earning_df_yearly.loc[:, \"Annual\"]\n",
+    "unemployment = unemployment_df_yearly.loc[:, \"Annual\"]\n",
+    "productivity = productivity_df_yearly.loc[:, \"Annual\"]\n",
+    "\n",
+    "frame = {'GDP': gdp, 'CPI': cpi, 'Earning': earning, 'Unemployment': unemployment, 'Productivity': productivity}\n",
+    "annual_adjusted_pd = pd.DataFrame(frame)\n",
+    "#annual_adjusted_pd = annual_adjusted_pd.reset_index(drop=True)\n",
+    "annual_adjusted_pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GDP           Unemployment    0.090424\n",
+       "Unemployment  GDP             0.090424\n",
+       "              Earning         0.214332\n",
+       "Earning       Unemployment    0.214332\n",
+       "CPI           Unemployment    0.230586\n",
+       "Unemployment  CPI             0.230586\n",
+       "              Productivity    0.291489\n",
+       "Productivity  Unemployment    0.291489\n",
+       "              GDP             0.931809\n",
+       "GDP           Productivity    0.931809\n",
+       "Productivity  Earning         0.933951\n",
+       "Earning       Productivity    0.933951\n",
+       "Productivity  CPI             0.949542\n",
+       "CPI           Productivity    0.949542\n",
+       "GDP           CPI             0.987333\n",
+       "CPI           GDP             0.987333\n",
+       "Earning       GDP             0.990451\n",
+       "GDP           Earning         0.990451\n",
+       "CPI           Earning         0.995640\n",
+       "Earning       CPI             0.995640\n",
+       "GDP           GDP             1.000000\n",
+       "Earning       Earning         1.000000\n",
+       "CPI           CPI             1.000000\n",
+       "Unemployment  Unemployment    1.000000\n",
+       "Productivity  Productivity    1.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#correlation = st.pearsonr(gdp,cpi,earning,unemployment,productivity)\n",
+    "#print(f\"The correlation between both factors is {round(correlation[0],2)}\")\n",
+    "annual_corr = annual_adjusted_pd.corr()\n",
+    "annual_corr.unstack().sort_values()"
+   ]
   }
  ],
  "metadata": {
